# Linux-Network-Monitor-and-Controller

./: README.md
extra/: capture.cpp
network-monitor/: Aggregator.cpp  Aggregator.hpp  ConsolePresentation.cpp  ConsolePresentation.hpp  Correlator.cpp  Correlator.hpp  PacketCapture.cpp  PacketCapture.hpp  PacketTypes.hpp  capture  capture.cpp  main.cpp  monitor
rust_monitor/: Cargo.toml
rust_monitor/gui/: Analytics.html  Analytics.js  app.js  index.html  login.html  login.js  overview.js  search.html  search.js  shared.js  style.css
rust_monitor/src/: aggregator.rs  api.rs  correlator.rs  main.rs  packet_capture.rs  packet_types.rs
