[package]
name = "monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
pcap = "1.3"
ctrlc = "3.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", default-features = true, features = ["clock"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
